sticky header, remove fire, change scrollbar, fix bugs

--- a/Public/styles/classes.css
+++ b/Public/styles/classes.css
@@ -22,13 +22,6 @@ h2 {
     color: var(--text);
 }
 
-input {
-	width: 100%;
-	height: 40px;
-	border: none;
-	font-size: 18px;
-}
-
 #search {
     background-color: var(--search);
     color: var(--text);
@@ -38,7 +31,7 @@ input {
     background-color: var(--navbar);
 }
 
-.selected:hover {
+#selectedCourses > .selected:hover {
     background-color: var(--invalid);
 }
 
@@ -81,7 +74,13 @@ input {
 	position: absolute;
 	display: flex-block;
 	float: left;
-	overflow-y: scroll;
+	margin-top: 10px;
+	overflow: hidden;
+}
+
+#availableCourses, #selectedCourses {
+    overflow-y: scroll;
+    height: calc(100% - 90px);
 }
 
 p {
@@ -97,12 +96,29 @@ p {
 	margin-left: 55%;
 }
 
-.classList > h2,
+.classList > #heading > h2,
 .classList2 > h2 {
 	background-color: var(--classes-bg);
 	width: 100%;
 	height: 40px;
 	text-align: center;
+	line-height: 1.5;
+}
+#heading {
+    height: 90px;
+}
+
+#heading > input {
+    width: 94%;
+    margin-left: 3%;
+    border-radius: 5px;
+    border: 1px solid black;
+    text-align: center;
+    background-color: var(--classes);
+    color: var(--text);
+    height: 40px;
+    font-size: 18px;
+    margin-bottom: 5px;
 }
 
 @media screen and (max-width: 1300px) {
